--- a/source/styles/base/fonts.css
+++ b/source/styles/base/fonts.css
@@ -3,9 +3,10 @@
     font-weight: 400;
     font-style: normal;
     src: url('../fonts/NunitoSans-Regular.woff2') format('woff2'),
-    url('../fonts/NunitoSans-Regular.woff2') format('woff');
+    url('../fonts/NunitoSans-Regular.woff') format('woff');
     font-display: swap;
 }
+
 
 @font-face {
     font-family: 'NunitoSans';
