--- a/source/styles/base/global.css
+++ b/source/styles/base/global.css
@@ -1,10 +1,9 @@
 .page__body {
-    --block-height: 75px;
-
     margin: 0;
     padding-top: var(--block-height);
 
     font-family: 'NunitoSans';
+    font-style: normal;
     font-size: 11px;
     line-height: 1.3;
     background-color: #171717;;
@@ -13,7 +12,7 @@
 
 @media (min-width: 1200px) {
     .page__body {
-        --block-height: 125px;
+
     }
 }
 
@@ -22,4 +21,5 @@
     min-width: 405px;
     margin: 0 auto;
     padding: 0 15px;
+
 }
