feat: hero section end

--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -16,4 +16,5 @@
 @import "components/reset-list.css";
 @import "components/button.css";
 @import "components/header.css";
+@import "components/hero.css";
 
