feat: section slider start

--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -17,4 +17,6 @@
 @import "components/button.css";
 @import "components/header.css";
 @import "components/hero.css";
+@import "components/project.css";
+@import "components/slider.css";
 
