--- a/source/styles/components/button.css
+++ b/source/styles/components/button.css
@@ -1,10 +1,6 @@
 .button {
     display: inline-block;
 
-    padding: 19px 70px;
-
-    width: 100%;
-
     background-color: #e3b873;
     color: #ffff;
 
@@ -17,6 +13,11 @@
 .button_state_active {
     background-color: transparent;
     border: 1px solid #fff;
+}
+
+.button_size_large {
+    padding: 19px 70px;
+    width: 100%;
 }
 
 
