--- a/source/styles/components/text.css
+++ b/source/styles/components/text.css
@@ -7,6 +7,10 @@
 
     font-size: var(--text-size);
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.4;
     word-wrap: break-word;
+}
+
+.text_size_small {
+    --text-size: 11px;
 }
