--- a/source/styles/components/slider.css
+++ b/source/styles/components/slider.css
@@ -1,39 +1,67 @@
-.slider {
-
-}
-
-
-.slider__content {
-    position: relative;
-}
-
 .slider__img {
-    display: block;
+    position: relative;
 
     width: 100%;
-
-
-    object-fit: cover;
-    object-position: 50% 50%;
+    min-height: 241px;
 }
 
-
-.slider__button {
+.slider__img img {
     position: absolute;
+    left: 0;
+    top: 0;
+
+    z-index: 1;
+
+
+    width: 100%;
+    height: 100%;
+
+    background-size: cover;
+    background-position: center center;
+
+
+    transition: opacity 800ms ease;
+}
+
+.slider__arrows {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    color: #fff;
+}
+
+.slider__arrow {
+    position: absolute;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 35px;
     height: 35px;
 
     background-color: #e3b873;
+    color: #fff;
 
     border-radius: 50%;
+    font-weight: bold;
 }
 
-.slider__button_state_prev {
+.slider__arrow.slider__arrow_route_prev {
     top: 50%;
     left: 14px;
+
+    z-index: 2;
 }
 
-.slider__button_state_next {
+.slider__arrow.slider__arrow_route_next {
     top: 50%;
     right: 14px;
+
+    z-index: 2;
 }
+
