feat: slider section end

--- a/source/styles/components/title.css
+++ b/source/styles/components/title.css
@@ -13,3 +13,12 @@
 
     text-transform: uppercase;
 }
+
+.title_color_white {
+    color: #fff;
+}
+
+.title_size_small {
+    --text-size: 14px;
+    color: #e3b873;
+}
