--- a/source/styles/components/project.css
+++ b/source/styles/components/project.css
@@ -22,4 +22,22 @@
     margin-bottom: 72px;
 }
 
+.project__statistics {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 15px;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 20px;
+
+    margin-bottom: 60px;
+
+    text-align: left;
+}
+
+.project__text {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+
 
