--- a/source/styles/components/slider.css
+++ b/source/styles/components/slider.css
@@ -1,3 +1,8 @@
+.slider {
+    position: relative;
+    margin-bottom: 36px;
+}
+
 .slider__images{
     position: relative;
 
@@ -9,9 +14,6 @@
     position: absolute;
     left: 0;
     top: 0;
-
-    z-index: 1;
-
 
     width: 100%;
     height: 100%;
@@ -58,14 +60,33 @@
 .slider__arrow.slider__arrow_route_prev {
     top: 50%;
     left: 14px;
-
-    z-index: 2;
 }
 
 .slider__arrow.slider__arrow_route_next {
     top: 50%;
     right: 14px;
+}
 
-    z-index: 2;
+.slider__dots {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    width: 100%;
+}
+
+.slider__dots-item {
+    width: 10px;
+    height: 10px;
+    background: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: background 0.4s ease;
+}
+
+.slider__dots-item:hover, .slider__dots-item.active {
+    background: #000;
 }
 
