--- a/source/styles/components/text.css
+++ b/source/styles/components/text.css
@@ -8,9 +8,14 @@
     font-size: var(--text-size);
     font-weight: 400;
     line-height: 1.4;
-    word-wrap: break-word;
+
+    word-break: break-all;
 }
 
 .text_size_small {
     --text-size: 11px;
+}
+
+#city {
+
 }
