feat: video play end

--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -19,6 +19,7 @@
 @import "components/hero.css";
 @import "components/project.css";
 @import "components/slider.css";
+@import "components/video.css";
 
 
 
