--- a/source/styles/components/slider.css
+++ b/source/styles/components/slider.css
@@ -60,11 +60,13 @@
 .slider__arrow.slider__arrow_route_prev {
     top: 50%;
     left: 14px;
+    transform: translateY(-50%);
 }
 
 .slider__arrow.slider__arrow_route_next {
     top: 50%;
     right: 14px;
+    transform: translateY(-50%);
 }
 
 .slider__dots {
